--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/material": "latest",
     "immer": "^10.0.2",
     "lodash": "^4.17.21",
+    "nanoid": "^5.0.1",
     "react": "latest",
     "react-dom": "latest",
+    "react-router-dom": "^6.17.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
